- Removed Content/Feature.
! Broken/Alert

~~~~~~~~~~~~0.0.1 Revitalize 2-12-2023 xx.xx P.M~~~~~~~~~~~~~~
+Added new storage options: Item vaults. Come in 4 sizes that can hold 2 to 5 chests worth of contents depending on the version. Sold by Clint.
~Updated SDVRevitalizeCreationTool to use Godot 4.0 and .Net 6.0.
+Added ItemVault compatibility to Automate+Revitalize mod.

~~~~~~~~~~~~0.0.1 Revitalize 2-2-2023 xx.xx P.M~~~~~~~~~~~~~~
~Migrated all item ids that used Revitalize to use the standard accepted <ModAuthor>.<ModName> format, in this case Omegasis.Revitalize
~Migrated all XML Serlaization Types to use the same convention of "Mod_Omegasis.Revitalize" instead of "Mod_Revitalize"
~Fixed a bug with PoweredMachine input to properly display an error message when a lack of energy input (batteries, coal, etc) was not present.
~Fixed a bug when interacting with a PoweredMachine while holding no active item in the Player's hand causing an error to occur.

~~~~~~~~~~~~0.0.1 Revitalize 1-24-2023 xx.xx P.M~~~~~~~~~~~~~~
+Migrated all mining drill outputs to ProcessingRecipe format .json files.
~Machines should not process the next imput until it's entire output queue has been grabbed by the player (or automate).
-Removed easter eggs for mining drills as there are simply better sources of wood...

~~~~~~~~~~~~0.0.1 Revitalize 1-18-2023 xx.xx P.M~~~~~~~~~~~~~~
+Successfully generated out output recipes for all geode crushers into ProcessingRecipe format.
+Updated GeodeCrushers to take a random recipe and use that to generate it's outputs.
~Processing recipes now properly take item chance to obtain into considerations when generating outputs.
~Started to define loot tables for mining drills.

~~~~~~~~~~~~0.0.1 Revitalize 1-17-2023 xx.xx P.M~~~~~~~~~~~~~~
+Added in conversion method to convert old JsonCraftingRecipe files for machines into the new ProcessingRecipe format.